# OS-labs

./: README.md
KP/doc/: reportKP.docx
KP/src/: A  B  C
lab1/doc/: report1.docx
lab2/: CMakeLists.txt  main.c
lab2/doc/: ЛР2.docx
lab2/include/: parent.h
lab2/src/: Makefile  a.out  child.c  child.out  child1.cpp  output.txt  parent.c
lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
lab3/doc/: report3.docx
lab3/include/: lab3.h
lab3/src/: lab3.cpp
lab4/: CMakeLists.txt
lab4/doc/: ЛР4.docx
lab4/include/: errorlib.h
lab4/src/: errorlib.cpp
lab5/doc/: report5.docx
lab5/include/: lab5.h
lab678/: CMakeLists.txt
lab678/doc/: report678.docx
lab678/src/: computing_node.cpp  distribution_node.cpp
tests/: CMakeLists.txt  lab3_test.cpp
